# dog

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml.example  docker-compose.yml  main.py  pyproject.toml  server.py
ml/: generation.py  llm.py  retrieval.py  vector.py
processing/: audio.py  docs.py  text.py
static/: styles.css
templates/: index.html
templates/fragments/: answer.html  chat.html  config.html  data.html
transcripted-audio/: 20250812_214810-processed.txt  20250813_192703-processed.txt  20250813_213036-processed.txt  20250814_200600-processed.txt  20250814_211707-processed.txt  20250815_194258-processed.txt  20250815_214746-processed.txt  auto-processed.txt
utils/: config.py  logging.py
