[project]
name = "dog"
version = "0.1.0"
description = "Local RAG"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "faiss-cpu>=1.12.0",
    "faster-whisper>=1.2.0",
    "ffmpeg-python>=0.2.0",
    "groq>=0.31.0",
    "joblib>=1.5.1",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "openai-whisper>=20250625",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
